--- a/xterm.log.html
+++ b/xterm.log.html
@@ -30,7 +30,7 @@
  * sale, use or other dealings in this Software without prior written        *
  * authorization.                                                            *
  *****************************************************************************
-  $XTermId: xterm.log.html,v 1.1765 2017/06/21 00:48:25 tom Exp $
+  $XTermId: xterm.log.html,v 1.1815 2017/12/30 19:25:39 tom Exp $
   -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 
@@ -60,7 +60,7 @@
   <h1>Contents</h1>
 
   <p><a href=
-  "http://invisible-island.net/xterm/xterm.log.html">Here</a> is
+  "https://invisible-island.net/xterm/xterm.log.html">Here</a> is
   the latest version of this file.</p>
 
   <p>It began as a list of the changes that I made for xterm, using
@@ -72,6 +72,8 @@
   CHANGELOG</a>).</p>
 
   <ul>
+    <li><a href="#xterm_331">Patch #331 - 2017/12/30</a></li>
+
     <li><a href="#xterm_330">Patch #330 - 2017/06/20</a></li>
 
     <li><a href="#xterm_329">Patch #329 - 2017/06/12</a></li>
@@ -943,6 +945,226 @@
     <li><a href="#xterm_02">Patch #2 - 1996/1/7</a></li>
 
     <li><a href="#xterm_01">Patch #1 - 1996/1/6</a></li>
+  </ul>
+
+  <h1><a name="xterm_331" id="xterm_331">Patch #331 -
+  2017/12/30</a></h1>
+
+  <ul>
+    <li>add workaround for improper grayscale adjustments made in
+    FreeType library, exposed by changes to rounding in 2.8.1,
+    which shows up as a gap in line-drawing characters (Debian
+    #880407).</li>
+
+    <li>improve a special case where a non-Unicode font's
+    line-drawing characters were not used, when specifying it via
+    the <code>utf8Fonts</code> resource, e.g.,
+
+      <blockquote>
+        <pre>
+        -fs 15 \
+        -xrm '*VT100.font:12x24' \
+        -xrm '*VT100.boldFont:12x24' \
+        -xrm '*VT100.utf8Fonts.font: 12x24' \
+        -xrm '*VT100.utf8Fonts.boldFont: 12x24' \
+</pre>
+      </blockquote>
+    </li>
+
+    <li>replace constant 10msec delay for next X event with new
+    resource <code>nextEventDelay</code>, and reduce that to 1msec
+    to accommodate faster machines than used when
+    <code>-hold</code> was implemented in <a href=
+    "#xterm_116">1999</a> (Debian #877628).</li>
+
+    <li>add <code>scroll-to</code> action, which simplifies binding
+    a key to scroll to the beginning or end of the saved-lines
+    (Debian #880120).</li>
+
+    <li>add building blocks for alternate screen and/or title-stack
+    features in the <code>terminfo</code> file.</li>
+
+    <li>improve calculations for cell-data size.</li>
+
+    <li>change configure script to enable XHTML/SVG screen dumps by
+    default.</li>
+
+    <li>change configure script to enable 256-colors by
+    default.</li>
+
+    <li>update config.guess, config.sub</li>
+
+    <li>change configure script option for
+    <code>--with-man2html</code> to use improved script by
+    default.</li>
+
+    <li>add case for private mode 1044 in DECRQM, to report the
+    keepClipboard resource setting and corresponding menu
+    entry.</li>
+
+    <li>fix an inconsistency between private mode 12 (the AT&amp;T
+    610 cursor blink) and <code>DECSCUSR</code>: the former relied
+    on having the <code>cursorBlink</code> resource set initially
+    to enable the escape sequence, while the latter does not.</li>
+
+    <li>add private modes 13 and 14, as well as resource
+    <code>cursorBlinkXOR</code> to allow better control over the
+    cursor-blinking state (discussion with Bram Moolenaar).</li>
+
+    <li>modify the html and svg screen dumps to support direct
+    color</li>
+
+    <li>modify media copy (screen-printing) to support the same SGR
+    codes as <code>DECRQSS</code>, including 88/256 indexed color
+    as well as direct color.</li>
+
+    <li>improve options-parsing for query-status.pl script.</li>
+
+    <li>modify parsing of <code>SGR</code> direct-color control
+    making <em>color space identitier</em> optional. The
+    corresponding <code>DECRQSS</code> reply always returns an
+    empty (default) field for the identifier.</li>
+
+    <li>add wide-attributes to <code>DECRQSS</code> reply for
+    <code>SGR</code>.</li>
+
+    <li>add private mode 1046 to help with scripting
+    applications.</li>
+
+    <li>correct expression used for readline-flags in DECRQM; to
+    test the current flag rather than information <em>stacked</em>
+    within the same variable.</li>
+
+    <li>correct typo in <code>ctlseqs.ms</code> reference to
+    ISO-8613-6 (patch by Mike Frysinger).</li>
+
+    <li>fix lintian warning for test-package.</li>
+
+    <li>fix typo in <code>DECRQSS</code> for <code>SGR</code> 48,
+    which printed the foreground value for colors past 15. Also use
+    colon delimiter for codes 38/48 in response (report by Paul
+    LeoNerd Evans).</li>
+
+    <li>improve workaround for Debian #542434 by using the font's
+    maximum width when no ISO-8859-1 glyphs are provided (Debian
+    #879936).</li>
+
+    <li>work around a special case of <em>Xft</em>'s mismanagement
+    of its cached data by adding a check before the
+    <code>-report-fonts</code> option to ensure that it does not
+    use an <code>XftPattern</code> which may have been freed during
+    a call to <code>XftFontOpenPattern</code>.</li>
+
+    <li>improve manual page description of <code>regex</code>
+    option for <code>on<em>X</em>Clicks</code> resources (report by
+    Lukas Mai).</li>
+
+    <li>add <code>directColor</code> resource.</li>
+
+    <li>additional manpage macro cleanup (Brandon Robinson, Debian
+    #880551).</li>
+
+    <li>add optional support for direct-colors (adapted from patch
+    by anonymous &ldquo;Nibby Nebbulous&rdquo;).</li>
+
+    <li>improve legacy/NRC character set mapping (patch by Thomas
+    Wolff):
+
+      <ul>
+        <li>enable alternate NRC set designators for French and
+        French Canadian, &lsquo;9&rsquo; and &lsquo;f&rsquo;
+        respectively, as documented in ctlseqs. (&lsquo;9&rsquo; is
+        documented for VT510, &lsquo;f&rsquo; is a Kermit
+        feature).</li>
+
+        <li>correct the Unicode value in the <em>DEC Technical</em>
+        table to show capital delta.</li>
+
+        <li>referring to
+
+          <blockquote>
+            <p><a href=
+            "http://vt100.net/docs/vt220-rm/table2-3b.html">http://vt100.net/docs/vt220-rm/table2-3b.html</a><br>
+
+            <a href=
+            "http://vt100.net/docs/vt320-uu/appendixe.html">http://vt100.net/docs/vt320-uu/appendixe.html</a></p>
+          </blockquote>
+
+          <p>add entries for the <em>DEC Supplemental Graphics</em>
+          table to display 0x28/0xa8 as &curren; and 0x5d/0xdd as
+          &Yuml;.</p>
+        </li>
+
+        <li>referring to
+
+          <blockquote>
+            <p><a href=
+            "http://www.vt100.net/charsets/technical.html">http://www.vt100.net/charsets/technical.html</a></p>
+          </blockquote>
+
+          <p>alter the Unicode values used for 0x2b through 0x2c to
+          use <em>curly braces</em> to work with the
+          &ldquo;middle&rdquo; parts displayed with 0x2f and
+          0x30.</p>
+        </li>
+
+        <li>modify the VT220 &ldquo;Supplemental&rdquo; table,
+        giving a hint that it was probably meant to be
+        &ldquo;Supplemental Graphics&rdquo; and is the same as
+        VT320's table.</li>
+      </ul>
+    </li>
+
+    <li>quiet a few font-warnings when a derived fontname cannot be
+    opened, overlooked in refactoring of font resources in <a href=
+    "#xterm_328">patch #328</a> (initially reported on <a href=
+    "https://cygwin.com/ml/cygwin/2017-06/msg00255.html">Cygwin
+    mailing list</a>, with <a href=
+    "https://cygwin.com/ml/cygwin/2017-07/msg00216.html">followup</a>).</li>
+
+    <li>correct error response for <code>DECRQSS</code> broken in
+    cleanup of Coverity reports in <a href="#xterm_288">patch
+    #288</a> (reports by Bram Moolenaar and IWAMOTO Kouichi).</li>
+
+    <li>improve <code>DECRPM</code> responses by returning <em>mode
+    not recognized</em> for modes which may not be settable due to
+    the selected <code>decTerminalID</code> resource (report by
+    IWAMOTO Kouichi).</li>
+
+    <li>correct logic for <code>print-immediate</code> action, and
+    enable corresponding menu entry (patch by Lauri
+    Tirkkonen).</li>
+
+    <li>add configure option <code>--with-pcre2</code> (patch by
+    David Michael).</li>
+
+    <li>fix a misspelled subsection title in ctlseqs.ms and add a
+    note regarding blink which was rendered as bold in X11R6.
+    Blinking text was implemented in <a href="#xterm_60">Patch
+    #60</a>.</li>
+
+    <li>fix typos in <code>xterm.man</code> (patches by Sven
+    Joachim, Larry Hynes).</li>
+
+    <li>fix typography in <code>xterm.man</code> (patch by Bjarni
+    Ingi Gislason, Debian #869248).</li>
+
+    <li>fix typo in <code>INSTALL</code> (Larry Hynes).</li>
+
+    <li>add <code>xterm-direct</code> terminal description based on
+    changes introduced in <a href="#xterm_277">patch #277</a>, and
+    relying upon ncurses <code><strong>RGB</strong></code>
+    extension.</li>
+
+    <li>modify <code>xterm-new</code> terminal description to use
+    ECMA-48 <code>REP</code>, reflecting its use in xterm since
+    <a href="#xterm_32">patch #32</a> (1996).</li>
+
+    <li>clarify comment in ctlseqs.ms regarding blink: it has been
+    part of xterm since <a href="#xterm_60">patch #60</a>
+    (1998).</li>
+
+    <li>update ftp URLs in documentation.</li>
   </ul>
 
   <h1><a name="xterm_330" id="xterm_330">Patch #330 -
@@ -3129,7 +3351,7 @@ Go-Mono-Italic.ttf: "Go Mono" "Italic"
 
     <li>add <code>E3</code> extended capability to
     <code>xterm-basic</code> to match ncurses <a href=
-    "http://invisible-island.net/ncurses/NEWS.html#t20120728">20120728</a>
+    "https://invisible-island.net/ncurses/NEWS.html#t20120728">20120728</a>
     patch.</li>
 
     <li>fix incorrect transformation of row-parameter for
@@ -4007,7 +4229,7 @@ Go-Mono-Italic.ttf: "Go Mono" "Italic"
     <li>minor formatting changes to ctlseqs.ms to simplify a script
     which extracts the feature information. See the results in
     <a href=
-    "http://invisible-island.net/xterm/xterm.faq.html#compare_versions">
+    "https://invisible-island.net/xterm/xterm.faq.html#compare_versions">
     Comparing versions, by counting controls</a> in the xterm
     FAQ.</li>
 
@@ -4210,7 +4432,7 @@ Go-Mono-Italic.ttf: "Go Mono" "Italic"
 
   <ul>
     <li>modify configure check for <a href=
-    "http://invisible-island.net/luit/">luit</a> to include new
+    "https://invisible-island.net/luit/">luit</a> to include new
     aliases for the program (<code>xterm-filter</code> and
     <code>bluit</code>).</li>
 
@@ -4275,7 +4497,7 @@ Go-Mono-Italic.ttf: "Go Mono" "Italic"
 
     <li>change default value of <code>menuLocale</code> resource to
     "C", to work around longstanding <a href=
-    "http://invisible-island.net/xterm/xterm.faq.html#slow_menus">Xorg
+    "https://invisible-island.net/xterm/xterm.faq.html#slow_menus">Xorg
     bug</a>.</li>
 
     <li>modify handling of <code>scrollKey</code> feature to ignore
@@ -5803,9 +6025,10 @@ Go-Mono-Italic.ttf: "Go Mono" "Italic"
     for the <code>Xaw</code> popup menus (adapted from patch by
     Dave Coffin).</li>
 
-    <li>modify do_precomposition() function and make-compose.sh to
-    handle 21-bit codes vs the 16-bit codes those were written for,
-    and fix a few mis-sorted codes (patch by Thomas Wolff).</li>
+    <li>modify <code>do_precomposition()</code> function and
+    <code>make-precompose.sh</code> to handle 21-bit codes vs the
+    16-bit codes those were written for, and fix a few mis-sorted
+    codes (patch by Thomas Wolff).</li>
 
     <li>handle special case in <code>-cjk_width</code> which
     unexpectedly caused a character's width to change when a
@@ -8506,7 +8729,7 @@ Klanderman).
     (patch by Holger Veit).</li>
 
     <li>used modified indent 2.0 (patch <a href=
-    "ftp://invisible-island.net/gnu-patches/">20020428</a>) to
+    "ftp://ftp.invisible-island.net/gnu-patches/">20020428</a>) to
     reformat most of the C source files, to simplify
     maintenance.</li>
 
