--- a/xterm.log.html
+++ b/xterm.log.html
@@ -30,7 +30,7 @@
  * sale, use or other dealings in this Software without prior written        *
  * authorization.                                                            *
  *****************************************************************************
-  $XTermId: xterm.log.html,v 1.1834 2018/04/15 23:17:12 tom Exp $
+  $XTermId: xterm.log.html,v 1.1850 2018/05/03 09:16:56 tom Exp $
   -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 
@@ -72,6 +72,8 @@
   CHANGELOG</a>).</p>
 
   <ul>
+    <li><a href="#xterm_333">Patch #333 - 2018/05/03</a></li>
+
     <li><a href="#xterm_332">Patch #332 - 2018/04/15</a></li>
 
     <li><a href="#xterm_331">Patch #331 - 2017/12/30</a></li>
@@ -947,6 +949,58 @@
     <li><a href="#xterm_02">Patch #2 - 1996/1/7</a></li>
 
     <li><a href="#xterm_01">Patch #1 - 1996/1/6</a></li>
+  </ul>
+
+  <h1><a name="xterm_333" id="xterm_333">Patch #333 -
+  2018/05/03</a></h1>
+
+  <ul>
+    <li>ensure that i18n is enabled if input-method is
+    enabled.</li>
+
+    <li>modify logic for pre-edit to update spot-location while the
+    cursor is invisible (Kakoune #1940).</li>
+
+    <li>change default icon to newer one, "mini.xterm".</li>
+
+    <li>install a complete set of icons, to simplify post-install
+    customization.</li>
+
+    <li>add resource <code>disallowedPasteControls</code> to extend
+    filtering of control characters from pastes.</li>
+
+    <li>add <code>print-on-error</code> action-hook, and document
+    action-hooks for dump-html, dump-svg.</li>
+
+    <li>provide action-hook for <code>print-immediate</code>, which
+    was available only as a menu-item (report by Rastislav
+    Barlik).</li>
+
+    <li>continue to improve notes in <code>ctlseqs.ms</code> which
+    mention where various controls originated.</li>
+
+    <li>add case to accept ECMA-48's bogus <code>SD</code>, but
+    document the issue in <code>ctlseqs.ms</code>.</li>
+
+    <li>add control sequence for loading XPM-icon file, using the
+    analogous control sequence from shelltool/dtterm.</li>
+
+    <li>add <code>-report-icons</code> option, to report on
+    XPM-icon and title-bar updates.</li>
+
+    <li>correct a discrepancy between locator-reports for VT220 vs
+    VT330.</li>
+
+    <li>add window-ops control sequences to complement existing
+    ones for reporting window-position and text-area size with
+    reports for text-area position and window-size.</li>
+
+    <li>display vt52 graphics mode characters.</li>
+
+    <li>correct case-statement for window-ops 10, overlooked since
+    some window managers equate vertical-maximize and
+    horizontal-maximize window hints with full-screen
+    maximize.</li>
   </ul>
 
   <h1><a name="xterm_332" id="xterm_332">Patch #332 -
