--- a/xterm.log.html
+++ b/xterm.log.html
@@ -30,7 +30,7 @@
  * sale, use or other dealings in this Software without prior written        *
  * authorization.                                                            *
  *****************************************************************************
-  $XTermId: xterm.log.html,v 1.1850 2018/05/03 09:16:56 tom Exp $
+  $XTermId: xterm.log.html,v 1.1895 2018/08/15 01:40:15 tom Exp $
   -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 
@@ -72,6 +72,10 @@
   CHANGELOG</a>).</p>
 
   <ul>
+    <li><a href="#xterm_335">Patch #335 - 2018/08/14</a></li>
+
+    <li><a href="#xterm_334">Patch #334 - 2018/08/12</a></li>
+
     <li><a href="#xterm_333">Patch #333 - 2018/05/03</a></li>
 
     <li><a href="#xterm_332">Patch #332 - 2018/04/15</a></li>
@@ -951,6 +955,157 @@
     <li><a href="#xterm_01">Patch #1 - 1996/1/6</a></li>
   </ul>
 
+  <h1><a name="xterm_335" id="xterm_335">Patch #335 -
+  2018/08/14</a></h1>
+
+  <ul>
+    <li>add <code>colorInnerBorder</code> resource to make a change
+    from <a href="#xterm_334">patch #334</a> configurable (reports
+    by H Merijn Brand, Gabriele Balducci).</li>
+  </ul>
+
+  <h1><a name="xterm_334" id="xterm_334">Patch #334 -
+  2018/08/12</a></h1>
+
+  <ul>
+    <li>modify <code>Imakefile</code> to reflect the fact that
+    NetBSD no longer has a working termcap emulation.</li>
+
+    <li>add resource-setting <code>validShells</code> which can be
+    used to augment the system's <code>/etc/shell</code> (prompted
+    by discussion with Paul Lampert).</li>
+
+    <li>stifle some useless warnings from lintian in
+    test-packages.</li>
+
+    <li>add the ncurses extension &ldquo;RGB&rdquo; to the
+    responses for the termcap-query feature.</li>
+
+    <li>improved getopts-handling in sample scripts.</li>
+
+    <li>fix some warnings from gcc8 and clang --analyze.</li>
+
+    <li>update note about incorrect documentation for
+    <code>DECRQSS</code> to include VT525 (report by Markus
+    Schmidt).</li>
+
+    <li>correct check for default-values in rectangular parsing; a
+    zero counts as a missing or default parameter (report/testcase
+    by Markus Schmidt).</li>
+
+    <li>correct some ranges in the <code>ambiguous[]</code> table
+    in wcwidth (adapted from patch by KUGA Tsutomu).</li>
+
+    <li>fix a special case with faint video attribute incorrectly
+    combined with default color.</li>
+
+    <li>add private control <code>XTREPORTSGR</code> for reporting
+    video-attributes and color on a rectangle, and script
+    <code>report-sgr.pl</code> to demonstrate it.</li>
+
+    <li>modify some of the markup in <code>ctlseqs.ms</code> to
+    work around groff's reassignment of ASCII punctuation
+    characters as documented in <em>groff_char(7)</em>.</li>
+
+    <li>treat ECMA-48 SGR 6 the same as SGR 5.</li>
+
+    <li>add private controls <code>XTPUSHSGR</code> and
+    <code>XTPOPSGR</code> for saving/restoring the current
+    video-attributes on a stack (adapted from patch by Dan
+    Thompson).</li>
+
+    <li>modify <code>DECRPM</code> response for logging enable to
+    indicate its state even when enabling/disabling it is not
+    allowed.</li>
+
+    <li>implement <code>DECSNLS</code></li>
+
+    <li>implement <code>DECRSPS</code></li>
+
+    <li>improve fill-color for double-buffer configuration, which
+    was sharing a graphic context with the cursor.</li>
+
+    <li>fix a couple of cases where double-sized VT100 characters
+    were not clipped, seen in Joe Smith's <a href=
+    "http://www.inwap.com/pdp10/#Tymnet">VT100 torture
+    test</a>.</li>
+
+    <li>color the inner border using the same
+    <code>borderColor</code> as the outer border, rather than
+    filling with the VT100's default background.</li>
+
+    <li>change encoding of &ldquo;THANKS&rdquo; to UTF-8.</li>
+
+    <li>modify handling of <code>DECELR</code> to recognize
+    <code>MotionNotify</code> events again, amending a check for
+    <code>allowMouseOps</code> which limited that to button-events
+    in <a href="#xterm_328">patch #328</a> (Olaf Rogalsky).</li>
+
+    <li>fix some screen-painting problems with left/right margins
+    when using insert-line or delete-line (report/testcase by
+    Martin Hostettler). also fix similar case with
+    index/reverse-index.</li>
+
+    <li>several minor performance improvements using macros, e.g.,
+    inline checks for character width.</li>
+
+    <li>add <code>DECSCPP</code> and <code>DECSLPP</code> to
+    <code>DECRQSS</code>.</li>
+
+    <li>implement <code>DECSCPP</code>.</li>
+
+    <li>implement <code>DECCIR</code> and <code>DECTABSR</code>
+    presentation reports.</li>
+
+    <li>modify checksum computation for <code>DECRQCRA</code> to
+    treat uninitialized cells as blanks rather than nulls.</li>
+
+    <li>drop custom-entity from HTML-dump, use UTF-8 for &amp;nbsp;
+    (Debian #902381).</li>
+
+    <li>modify display of non-BMP characters when using bitmap
+    fonts to show a null/empty box rather than the replacement
+    character which was used in cleanup changes for <a href=
+    "#xterm_233">patch #233</a> (report by Christian
+    Weisgerber).</li>
+
+    <li>when setting up clipping rectangle for Xft, allow for the
+    case where xterm is only displaying a combining character,
+    where the base was already written (report by Joshua
+    Crowgey).</li>
+
+    <li>allow reset Xft's state if switching font-sizes when
+    double-buffering is used.</li>
+
+    <li>fix repainting, e.g., on resize, when double-buffering is
+    used with Xft (patch by Daniel Colascione).</li>
+
+    <li>correct some interchanged pairs of symbols in
+    <code>unicode/keysym.map</code> (Brad Town).</li>
+
+    <li>improve configure macros CF_GCC_WARNINGS, CF_GNU_SOURCE,
+    CF_POSIX_C_SOURCE, CF_TRY_XOPEN_SOURCE, CF_XOPEN_SOURCE,
+    CF_X_ATHENA_CPPFLAGS.</li>
+
+    <li>modify <code>logFile</code> resource to interpret
+    &ldquo;<code>-</code>&rdquo; as the standard output (adapted
+    patch by Colum Paget).</li>
+
+    <li>improve documentation of Tek4014 menu options; fix a case
+    where the Tek4014 window was not displayed before switching
+    modes.</li>
+
+    <li>re-correct parameter for <em>pid</em> used for DECCKSR,
+    DECRQCSR (see <a href="#xterm_315">xterm #315</a>).</li>
+
+    <li>hard/soft reset now resets the cursor-blinking state that
+    may have been set via escape sequences; the cursor-blinking
+    menu-entry feature is unmodified (report by Matthieu
+    Herrb).</li>
+
+    <li>update config.guess, config.sub</li>
+  </ul>
+
   <h1><a name="xterm_333" id="xterm_333">Patch #333 -
   2018/05/03</a></h1>
 
@@ -1195,7 +1350,7 @@
     by anonymous &ldquo;Nibby Nebbulous&rdquo;).</li>
 
     <li>improve legacy/NRC character set mapping (patch by Thomas
-    Wolff):
+    Wolff), e.g.,
 
       <ul>
         <li>enable alternate NRC set designators for French and
